[package]
name = "timestamp-converter"
version = "0.1.0"
authors = ["24seconds <24crazyoung@gmail.com>"]
edition = "2021"
description = """
simple timestamp converter
"""
homepage = "https://github.com/24seconds/timestamp-converter"
repository = "https://github.com/24seconds/timestamp-converter"
readme = "README.md"
categories = ["command-line-utilities"]
license = "Beerware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { versions = "3.1.18", features = ["cargo"] }
chrono = "0.4.19"
